# RoSEHFL

./: .gitignore  README.md  flwr.ipynb  lab_hosts.yaml  pyproject.toml  requirements.txt  template.txt
flower_shapefl_code/: .gitignore  main.py
flower_shapefl_code/notebooks/: rose_hfl_colab.ipynb
flower_shapefl_code/scripts/: deploy_client.py  deploy_server.py  run_byzantine_sweep.py  run_rose_comparison.py  run_rose_simulation.py
flower_shapefl_code/shapefl/: client.py  strategy.py
improvement/: Federated Learning_ ROSE vs. SHAPEFL.docx
notebooks/: colab_run.ipynb  kaggle_run.ipynb  rose_hfl_analysis.ipynb
rosehfl/: __init__.py  _cid_mapper.py  byzantine.py  client.py  strategy.py
scripts/: _cli_args.py  _comparison_plots.py  _deploy_common.py  _experiment_bundle.py  _rose_common.py  _strategy_factory.py  deploy_client.py  deploy_lab.py  deploy_local.py  deploy_server.py  generate_partitions.py  plot_shapefl_rose_q1s_metrics.py  run_ablation_grid.py  run_byzantine_sweep.py  run_comparison.py  run_fairness_eval.py  run_rose_comparison.py  run_rose_family_comparison.py  run_rose_simulation.py  run_shapefl_rose_effective_comparison.py  run_shapefl_rose_q1s_comparison.py  run_shapefl_simulation.py  run_simulation.py  visualize_results.py
shapefl/: __init__.py  byzantine.py  client.py  strategy.py
tests/: test_compression.py  test_drift.py  test_probe_serialization.py  test_robust_agg.py  test_rose_effective_planning.py  test_rose_planner.py  test_rose_smoke.py  test_shapley.py
tmp_plot_output/: comparison_summary.csv  normalized_metrics.json
(+98 files in other folders)
