[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosehfl"]

[project]
name = "rosehfl-flwr"
version = "0.1.0"
description = "RoSEHFL: Robust and Scalable Evaluation of Heterogeneous Federated Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]>=1.26.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opacus>=1.5.4",
    "pandas>=3.0.1",
    "pulp>=3.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
